Add mrpack file & fix release action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,15 +12,15 @@ jobs:
     runs-on: ubuntu-latest
     name: Test mrpack distributor
     steps:
-      - uses: actions/setup-go@v4.1.0
+      - name: Install packwiz
+        uses: actions/setup-go@v4.1.0
       - run: go install github.com/packwiz/packwiz@latest
       - name: Copy stuff
         uses: actions/checkout@v4
-      - uses: jirutka/setup-alpine@v1
+      - name: Install mrpack-distributor from git repository
+        uses: baptiste0928/cargo-install@v2
         with:
-          branch: v3.15
-      - run: curl -L https://github.com/LilydevMC/mrpack-distributor/releases/download/0.1.0-alpha.2/mrpack-distributor_0.1.0-alpha.2_x86_64-unknown-linux-musl.tar.gz -o mrpack-dist.tar.gz
-      - run: tar xvf mrpack-dist.tar.gz && chmod +x mrpack-distributor
-      - run: ./mrpack-distributor run -dv ${{ github.event.inputs.version }}
-#        with:
-#          version: ${{ github.event.inputs.version }}
+          git: https://github.com/LilydevMC/mrpack-distributor
+          branch: main
+      - name: Run release
+        run: mrpack-distributor run -dv ${{ github.events.inputs.version }}
