--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,8 @@ jobs:
   run_mrpack_distributor:
     runs-on: ubuntu-latest
     name: Test mrpack distributor
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Install packwiz
         uses: actions/setup-go@v4.1.0
