Remove token from test banner link

--- a/mrpack.toml
+++ b/mrpack.toml
@@ -14,4 +14,4 @@ github_emoji_id = "<:github_light:1000525612911444118>"
 modrinth_emoji_id = "<:modrinth:1000522854766497813>"
 discord_ping_role = "<@&1000858651243843765>"
 title_emoji = "💖"
-embed_image_url = "https://raw.githubusercontent.com/LilydevMC/CozyCreations/main/assets/project_banner.png?token=GHSAT0AAAAAACGZZ7WQK4C6IRGVDZ6SUSHWZJPCB5A"
+embed_image_url = "https://raw.githubusercontent.com/LilydevMC/CozyCreations/main/assets/project_banner.png"
